vlib/v/checker/tests/result_type_call_err.vv
struct Foo {}

fn (f Foo) foo() int {
	return 1
}

fn new_foo() !Foo {
	return Foo{}
}

fn main() {
	new_foo().foo()
}
